--- a/src/analysis/sandbox/model_explore/model_march.Rmd
+++ b/src/analysis/sandbox/model_explore/model_march.Rmd
@@ -43,18 +43,24 @@ The resulting national water service boundary layer is the product of a "tiered 
 2.  In the absence of explicit water service boundary data, we use a matching algorithm that matches PWSIDs by spatial intersection and name to [TIGER place polygons](https://www.census.gov/geographies/mapping-files/time-series/geo/tiger-line-file.html). We validate this heuristic approach on explicit water service boundaries[^1], and note additional independent validation of this approach by [Patterson et al. (2019) ](https://nicholasinstitute.duke.edu/publications/sensitivity-analysis-using-municipal-boundaries-proxy-service-area-boundaries-when).\
 3.  Finally, in the absence of an explicit water service boundary or a TIGER place polygon match, a statistical model trained on explicit water service boundary data (1 above) is used to estimate a reasonable radius at provided PWSID centroids, notwithstanding centroid accuracy issues that remain intractable (this issue is discussed in the [Limitations](#limitations) section).
 
-[^1]: In the previous report (`eda_february.html`,"*Section* *6 TIGER proxy polygon appropriateness*"), we show that matching pwsids to TIGER places is highly accurate: matched TIGER place polygons intersected explicit water service boundary polygons 93.16% of the time. In this report, we further quantify this boolean (TRUE/FALSE) spatial intersection in terms of "percent overlap". 
+[^1]: In a previous report (`eda_february.html`,"*Section* *6 TIGER proxy polygon appropriateness*"), we show that matching pwsids to TIGER places is highly accurate: matched TIGER place polygons intersected explicit water service boundary polygons 93.16% of the time. In this report, we further quantify this boolean (TRUE/FALSE) spatial intersection in terms of "percent overlap". 
 
-Below is a conceptual diagram of the three tiers. Tier 1 data always supersedes Tier 2 data, which in turn always supersedes Tier 3 data. Thus, the resulting the resulting water service boundary layer described in this report is combination of all three tiers, depending on data availability for the water system, and whether or not it matches to a TIGER place. 
+Below is a conceptual diagram of the three tiers in the TAMM approach. Tier 1 data always supersedes Tier 2, which in turn always supersedes Tier 3 Thus, the resulting the resulting water service boundary layer described in this report is combination of all three tiers, depending on data availability for the water system, and whether or not it matches to a TIGER place. 
 
 ```{r conceptual-model, echo = FALSE}
 knitr::include_graphics(here::here("src/analysis/sandbox/model_explore/etc/sl-march-2020.png"))
 ```
 
-In the sections that follow, we summarize our approach for each of the three tiers. As we move from Tier 1 to Tier 3, there is increasingly more uncertainty, hence, we describe each Tier with increasing detail. Validation and uncertainty associated with Tier 2 and 3 estimates are provided. 
+In the sections that follow, we summarize our approach for each of the three tiers. As we move from Tier 1 to Tier 3, there is increasingly more uncertainty, hence, we describe each Tier with increasing detail and provide measures of validation and uncertainty for Tier 2 and 3 estimates.   
 
-Finally, we encourage the reader to consider the TAMM water service boundary layer composite not as a final product, but rather, one that may be improved with the assimilation of more Tier 1 data, improvements to the Tier 2 matching algorithm, and improvements to the Tier 3 model. Ultimately, this entire workflow may be superseded by Tier 1 data for all water service boundaries nationwide, which would reduce the problem to one of simple data assimilation. 
+Finally, we encourage the reader to consider the TAMM water service boundary layer not as a final product, but rather, one that may be improved with the assimilation of additional Tier 1 data, improvements to the Tier 2 matching algorithm, and improvements to the Tier 3 model. Ultimately, this entire workflow may be superseded by Tier 1 data for all water service boundaries nationwide, which would reduce the problem to one of simple data assimilation. 
 
+
+# Report outline
+
+Present key results and then delve into methods, like PNAS. 
+
+# Water system boundary spatial database
 
 ```{r load}
 library(tidyverse)
@@ -70,12 +76,6 @@ epsg         <- as.numeric(Sys.getenv("WSB_EPSG"))
 d <- read_csv(path(staging_path, "matched_output_clean.csv")) %>%
   mutate(radius = radius/1000)
 ```
-
-# Report outline
-
-Present key results and then delve into methods, like PNAS. 
-
-# Water system boundary spatial database
 
 Tiered Assimilation Model (TAM), with tiers of decreasing data fidelity. 
 
